Remove opengl install steps
Signed-off-by: Obed N Munoz <obed.n.munoz@gmail.com>

--- a/math-fundamentals/Makefile
+++ b/math-fundamentals/Makefile
@@ -5,6 +5,10 @@ html :
 	docker run --rm -v ${PWD}:/mnt -e MARP_USER="$(id -u):$(id -g)" \
 	-e LANG=${LANG} -p 8080:8080 -p 37717:37717 marpteam/marp-cli -I /mnt --html
 
+pdf :
+	docker run --rm -v ${PWD}:/mnt -e MARP_USER="$(id -u):$(id -g)" \
+	-e LANG=${LANG} -p 8080:8080 -p 37717:37717 marpteam/marp-cli -I /mnt --pdf --allow-local-files
+
 serve:
 	docker run --rm --init -v ${PWD}:/home/marp/app/ -e LANG=${LANG} \
 	-e MARP_USER="$(id -u):$(id -g)" -p 8080:8080 marpteam/marp-cli -s .
